--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
+version: '3.8'
 services:
   darts-scorer:
     build: .
-    container_name: darts_scorer_app
     ports:
       - "5054:5054"
-    restart: unless-stopped
+    volumes:
+      - .:/app
+    environment:
+      # Use a fixed secret key for all workers in the container
+      - SECRET_KEY=a-very-secure-and-static-secret-key-for-darts
